feat(analytics): PR #22 - Enhance TCO Analysis with Multi-Fuel Support
WHAT CHANGED:
- Enhanced TCOAnalysis entity with multi-fuel support fields
- Added carbon emissions tracking and ESG costs
- Implemented regional cost adjustments for 8 major cities
- Added 5-year projection calculations with inflation
- Created fuel type comparison capabilities

MULTI-FUEL SUPPORT:
- EV: Electricity costs, 40% maintenance factor, 85% depreciation factor
- ICE: Petrol (₹6/km) and Diesel (₹5.5/km) cost models
- HYBRID: 30% fuel efficiency improvement over ICE
- CNG: ₹80/kg, 22 km/kg efficiency
- LPG: ₹55/liter, 12 km/liter efficiency

CARBON COST FEATURES:
- CO2 emissions calculated per fuel type
- Social carbon cost at ₹5/kg CO2
- EV emissions from grid electricity (0.82 kg/kWh)
- Hybrid/CNG/LPG emissions tracked

NEW ENDPOINTS:
- compareTCO(vehicleId1, vehicleId2) - Compare two vehicles
- compareFuelTypes(price, km, years, region) - Compare all fuel types
- get5YearProjection(vehicleId) - 5-year TCO forecast

FILES CHANGED:
- TCOAnalysis.java: 160+ lines, 20+ new fields
- TCOAnalysisService.java: 700+ lines, complete rewrite
- TCOAnalysisResponse.java: Added carbon/projection fields
- TCOProjectionResponse.java: New DTO for projections
- V6__add_tco_multi_fuel_support.sql: Migration for new columns
- TCOAnalysisServiceTest.java: 450+ lines, 15+ test cases

PR #22 of 50 - Backend Feature Implementation